--- a/abc.templates/base-workflows/contents/guardian-nightly.yml
+++ b/abc.templates/base-workflows/contents/guardian-nightly.yml
@@ -35,12 +35,12 @@ jobs:
     runs-on: 'ubuntu-latest'
     needs: 'guardian_plan'
 
-    if: failure()
+    if: 'failure()'
 
     steps:
       - name: 'Create an issue on failure'
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: '${{ github.token }}'
         run: |
             TITLE="Nightly guardian plan failure"
             BODY='The nightly "guardian run plan" job has failed. Please check the logs for details.'
