--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -134,7 +134,7 @@ jobs:
       fail-fast: false
       max-parallel: 100
       matrix:
-        working_directory: '${{ fromJSON(needs.init.outputs.directories) }}'
+        working_directory: '${{ fromJSON(needs.init.outputs.directories).entrypoints }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
