Refactor URL resolution code and move most of it into the Github client, add explicit job name definition in workflow yaml

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -124,6 +124,7 @@ jobs:
             -for-command="apply"
 
   plan:
+    name: 'plan (${{ matrix.working_directory }})'
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -229,6 +230,7 @@ jobs:
           -plan-result="${{ needs.plan.result }}"
 
   apply:
+    name: 'apply (${{ matrix.working_directory }})'
     needs:
       - 'init'
       - 'plan'
