--- a/abc.templates/base-workflows/contents/guardian-apply.yml
+++ b/abc.templates/base-workflows/contents/guardian-apply.yml
@@ -68,6 +68,7 @@ jobs:
           echo "directories=${DIRECTORIES}" >> $GITHUB_OUTPUT
 
   apply:
+    name: 'apply (${{ matrix.working_directory }})'
     if: |
       needs.init.outputs.directories != '[]'
     needs:
