--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -124,6 +124,7 @@ jobs:
             -for-command="apply"
 
   plan:
+    name: 'plan (${{ matrix.working_directory }})'
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -176,6 +177,7 @@ jobs:
           DIRECTORY: '${{ matrix.working_directory }}'
           # used to create comments on pull requests (access to only this repo)
           REPO_TOKEN: '${{ github.token }}'
+          JOB_NAME: '${{ github.job }} (${{ matrix.working_directory }})'
         run: |-
           guardian plan \
           -github-owner="${GITHUB_OWNER_NAME}" \
@@ -183,7 +185,8 @@ jobs:
           -github-token="${REPO_TOKEN}" \
           -pull-request-number="${PULL_REQUEST_NUMBER}" \
           -bucket-name="${GUARDIAN_BUCKET_NAME}" \
-          -dir="${DIRECTORY}"
+          -dir="${DIRECTORY}" \
+          -job-name="${JOB_NAME}"
 
   plan_success:
     needs:
@@ -227,6 +230,7 @@ jobs:
           -plan-result="${{ needs.plan.result }}"
 
   apply:
+    name: 'apply (${{ matrix.working_directory }})'
     needs:
       - 'init'
       - 'plan'
@@ -280,6 +284,7 @@ jobs:
           COMMIT_SHA: '${{ github.sha }}'
           # used to create comments on pull requests (access to only this repo)
           REPO_TOKEN: '${{ github.token }}'
+          JOB_NAME: '${{ github.job }} (${{ matrix.working_directory }})'
         run: |-
           guardian apply \
           -github-owner="${GITHUB_OWNER_NAME}" \
@@ -287,7 +292,8 @@ jobs:
           -github-token="${REPO_TOKEN}" \
           -pull-request-number="${PULL_REQUEST_NUMBER}" \
           -bucket-name="${GUARDIAN_BUCKET_NAME}" \
-          -dir="${DIRECTORY}"
+          -dir="${DIRECTORY}" \
+          -job-name="${JOB_NAME}"
 
       - name: 'Guardian Destroy'
         env:
