--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -31,6 +31,7 @@ permissions:
 # only one plan, per pr should run at a time
 concurrency:
   group: '${{ github.workflow }}-${{ github.event.pull_request.number }}-${{ github.head_ref || github.ref }}'
+  cancel-in-progress: true
 
 env:
   GITHUB_OWNER_NAME: '${{ github.event.repository.owner.login }}'
@@ -77,13 +78,13 @@ jobs:
       contents: 'read'
       pull-requests: 'write'
     outputs:
-      directories: '${{ steps.dirs.outputs.directories }}'
+      modified: '${{ steps.entrypoints.outputs.modified }}'
+      destroy: '${{ steps.entrypoints.outputs.destroy }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
         with:
           fetch-depth: 0 # get everything so we can use git diff
-          ref: '${{ github.event.pull_request.head.sha }}'
 
       - name: 'Download Guardian'
         uses: 'actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e' # ratchet:actions/download-artifact@v4
@@ -99,15 +100,18 @@ jobs:
           echo "${INSTALL_PATH}" >> $GITHUB_PATH
 
       - name: 'Guardian Directories'
-        id: 'dirs'
+        id: 'entrypoints'
         shell: 'bash'
         env:
           SOURCE_REF: '${{ github.event.pull_request.base.sha }}'
           DEST_REF: '${{ github.event.pull_request.head.sha }}'
         run: |-
-          DIRECTORIES=$(guardian entrypoints -dir=./terraform)
-          echo "entrypoints -> ${DIRECTORIES}"
-          echo "directories=${DIRECTORIES}" >> $GITHUB_OUTPUT
+          ENTRYPOINTS=$(guardian entrypoints -dir=./terraform -body-contents="GUARDIAN_DESTROY=terraform/project2")
+          echo "entrypoints -> ${ENTRYPOINTS}"
+
+          # parse the json response and create outputs for each type of directory
+          echo "modified=$(echo $ENTRYPOINTS | jq -j -c '.modified')" >> $GITHUB_OUTPUT
+          echo "destroy=$(echo $ENTRYPOINTS | jq -j -c '.destroy')" >> $GITHUB_OUTPUT
 
       - name: 'Guardian Remove Previous Plan/Apply Comments'
         shell: 'bash'
@@ -125,6 +129,8 @@ jobs:
 
   plan:
     name: 'plan (${{ matrix.working_directory }})'
+    if: |
+      needs.init.outputs.modified != '[]'
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -136,12 +142,10 @@ jobs:
       fail-fast: false
       max-parallel: 100
       matrix:
-        working_directory: '${{ fromJSON(needs.init.outputs.directories).entrypoints }}'
+        working_directory: '${{ fromJSON(needs.init.outputs.modified) }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
-        with:
-          ref: '${{ github.event.pull_request.head.sha }}'
 
       - name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@71fee32a0bb7e97b4d33d548e7d957010649d8fa' # ratchet:google-github-actions/auth@v2
@@ -188,10 +192,110 @@ jobs:
           -dir="${DIRECTORY}" \
           -job-name="${JOB_NAME}"
 
+  plan_destroy:
+    name: 'plan_destroy (${{ matrix.working_directory }})'
+    if: |
+      needs.init.outputs.destroy != '[]'
+    needs:
+      - 'init'
+    runs-on: 'ubuntu-latest'
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+      pull-requests: 'write'
+    strategy:
+      fail-fast: false
+      max-parallel: 100
+      matrix:
+        working_directory: '${{ fromJSON(needs.init.outputs.destroy) }}'
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
+
+      - name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@71fee32a0bb7e97b4d33d548e7d957010649d8fa' # ratchet:google-github-actions/auth@v2
+        with:
+          workload_identity_provider: '${{ env.GUARDIAN_WIF_PROVIDER }}'
+          service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+
+      - name: 'Setup Terraform'
+        uses: 'abcxyz/secure-setup-terraform@fa5832adc577578c1dfb422d13722bdeb711cf29' # ratchet:abcxyz/secure-setup-terraform@main
+        with:
+          terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
+          terraform_module_location: './${{ matrix.working_directory }}'
+          terraform_lockfile_location: './${{ matrix.working_directory }}'
+          protect_lockfile: true
+          terraform_wrapper: false
+
+      - name: 'Download Guardian'
+        uses: 'actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e' # ratchet:actions/download-artifact@v4
+        with:
+          name: 'guardian'
+          path: '${{ runner.temp }}/.guardian'
+
+      - name: 'Setup Guardian'
+        env:
+          INSTALL_PATH: '${{ runner.temp }}/.guardian'
+        run: |-
+          chmod +x "${INSTALL_PATH}/guardian"
+          echo "${INSTALL_PATH}" >> $GITHUB_PATH
+
+      # Since our tests are stateless, we need an apply before a plan destroy
+      - name: 'Guardian Apply'
+        env:
+          DIRECTORY: '${{ matrix.working_directory }}'
+        shell: 'bash'
+        run: |-
+          guardian run \
+          -dir="${DIRECTORY}" \
+          -- apply \
+          -input=false \
+          -auto-approve
+
+      - name: 'Guardian Plan'
+        shell: 'bash'
+        env:
+          DIRECTORY: '${{ matrix.working_directory }}'
+          # used to create comments on pull requests (access to only this repo)
+          REPO_TOKEN: '${{ github.token }}'
+          JOB_NAME: '${{ github.job }} (${{ matrix.working_directory }})'
+        run: |-
+          guardian plan \
+          -destroy \
+          -github-owner="${GITHUB_OWNER_NAME}" \
+          -github-repo="${GITHUB_REPO_NAME}" \
+          -github-token="${REPO_TOKEN}" \
+          -pull-request-number="${PULL_REQUEST_NUMBER}" \
+          -bucket-name="${GUARDIAN_BUCKET_NAME}" \
+          -dir="${DIRECTORY}" \
+          -job-name="${JOB_NAME}"
+
+      # this is done only for integration testing since our tests do not have remote state.
+      # we plan the destroy and apply the destroy in the same step.
+      - name: 'Guardian Destroy'
+        shell: 'bash'
+        env:
+          DIRECTORY: '${{ matrix.working_directory }}'
+          COMMIT_SHA: '${{ github.sha }}'
+          # used to create comments on pull requests (access to only this repo)
+          REPO_TOKEN: '${{ github.token }}'
+          JOB_NAME: '${{ github.job }} (${{ matrix.working_directory }})'
+        run: |-
+          guardian apply \
+          -github-owner="${GITHUB_OWNER_NAME}" \
+          -github-repo="${GITHUB_REPO_NAME}" \
+          -github-token="${REPO_TOKEN}" \
+          -pull-request-number="${PULL_REQUEST_NUMBER}" \
+          -bucket-name="${GUARDIAN_BUCKET_NAME}" \
+          -dir="${DIRECTORY}" \
+          -job-name="${JOB_NAME}"
+
   plan_success:
+    if: '${{ always() }}'
     needs:
       - 'init'
       - 'plan'
+      - 'plan_destroy'
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
@@ -199,8 +303,6 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
-        with:
-          ref: '${{ github.event.pull_request.head.sha }}'
 
       - name: 'Download Guardian'
         uses: 'actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e' # ratchet:actions/download-artifact@v4
@@ -227,13 +329,15 @@ jobs:
           -github-token="${REPO_TOKEN}" \
           -pull-request-number="${PULL_REQUEST_NUMBER}" \
           -init-result="${{ needs.init.result }}" \
-          -plan-result="${{ needs.plan.result }}"
+          -plan-result="${{ needs.plan.result }}" \
+          -plan-result="${{ needs.plan_destroy.result }}"
 
   apply:
     name: 'apply (${{ matrix.working_directory }})'
+    if: |
+      needs.init.outputs.modified != '[]'
     needs:
       - 'init'
-      - 'plan'
       - 'plan_success'
     runs-on: 'ubuntu-latest'
     permissions:
@@ -244,7 +348,7 @@ jobs:
       fail-fast: false
       max-parallel: 100
       matrix:
-        working_directory: '${{ fromJSON(needs.init.outputs.directories).entrypoints }}'
+        working_directory: '${{ fromJSON(needs.init.outputs.modified) }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
