--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,6 +23,7 @@ on:
       - 'reopened'
     branches:
       - 'main'
+      - 'release/**/*'
 
 # default permission for all jobs should just be read
 permissions:
