--- a/abc.templates/base-workflows/spec.yaml
+++ b/abc.templates/base-workflows/spec.yaml
@@ -62,10 +62,9 @@ steps:
           with: '{{.guardian_state_bucket}}'
         - to_replace: 'REPLACE_GUARDIAN_VERSION_TAG'
           with: '{{ trimPrefix ._git_tag "v" }}'
-        - to_replace: '# REPLACE_APPROVERS_AGGREGATION'
+        - to_replace: '# REPLACE_APPROVERS_DATA_AGGREGATION'
           with: |-
-            {{- if .policy_enforcement -}}
-
+            {{- if eq .policy_enforcement "true" }}
                   - uses: 'actions/github-script@v7'
                     with:
                       github-token: {{ "'${{ steps.mint-token.outputs.token }}'" }}
@@ -150,41 +149,40 @@ steps:
 
         - to_replace: '# REPLACE_OPA'
           with: |-
-            {{- if .policy_enforcement }}
-                - name: 'Setup OPA'
-                  uses: 'open-policy-agent/setup-opa@v2'
-                  with:
-                    version: 'latest'
+            {{- if eq .policy_enforcement "true" }}
+                  - name: 'Setup OPA'
+                    uses: 'open-policy-agent/setup-opa@v2'
+                    with:
+                      version: 'latest'
 
-                - name: 'Evaluate Policy'
-                  id: 'opa_eval'
-                  env:
-                    DIRECTORY: {{ "'${{ matrix.working_directory }}'" }}
-                    TEMP_DIR: {{ "'${{ runner.temp }}'" }}
-                  shell: 'bash'
-                  run: |-
-                    terraform -chdir=${DIRECTORY} show -json tfplan.binary > tfplan.json
+                  - name: 'Evaluate Policy'
+                    id: 'opa_eval'
+                    env:
+                      DIRECTORY: {{ "'${{ matrix.working_directory }}'" }}
+                      TEMP_DIR: {{ "'${{ runner.temp }}'" }}
+                    shell: 'bash'
+                    run: |-
+                      terraform -chdir=${DIRECTORY} show -json tfplan.binary > tfplan.json
 
-                    DECISION=$(opa eval --input tfplan.json \
-                      --format raw \
-                      --data ./policy \
-                      --data ${TEMP_DIR}/approvers.json \
-                      "data.guardian")
+                      DECISION=$(opa eval --input tfplan.json \
+                        --format raw \
+                        --data ./policy \
+                        --data ${TEMP_DIR}/approvers.json \
+                        "data.guardian")
 
-                    echo "$DECISION" > policy_results.json
-            {{ end }}
+                      echo "$DECISION" > policy_results.json
+            {{- end -}}
 
         - to_replace: '# REPLACE_GUARDIAN_POLICY_COMMAND'
           with: |-
-            {{- if .policy_enforcement }}
-              - name: 'Guardian Policy'
-                shell: 'bash'
-                env:
-                  DIRECTORY: '${{ matrix.working_directory }}'
-                run: |-
-                  guardian policy \
-                    -results-file=policy_results.json
+            {{- if eq .policy_enforcement "true" }}
+                  - name: 'Guardian Policy'
+                    shell: 'bash'
+                    run: |-
+                      guardian policy \
+                        -results-file=policy_results.json
             {{ end }}
+
   # TODO: once https://github.com/abcxyz/abc/pull/423 is available, switch to a rule requiring a '_git_tag' value
   - desc: 'Print warning if rendered without git tag'
     action: 'print'
