fix: add release branches for workflows (#388)
STACKED_PR=https://github.com/abcxyz/guardian/pull/387

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -22,6 +22,7 @@ on:
       - 'reopened'
     branches:
       - 'main'
+      - 'release/**/*'
 
 # default permission for all jobs should just be read
 permissions:
