--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -277,7 +277,7 @@ jobs:
         env:
           GUARDIAN_GITHUB_TOKEN: '${{ github.token }}'
         run: |-
-          cat policy_results.json
+          export GUARDIAN_LOG_LEVEL=ERROR
           guardian policy \
             -guardian-github-token=$GUARDIAN_GITHUB_TOKEN \
             -results-file=policy_results.json
